--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,13 @@
 {
     "recommendations": [
-        "raspberry-pi.raspberry-pi-pico",
-        "ms-vscode.cpptools-extension-pack",
-        "twxs.cmake",
-        "wokwi.wokwi-vscode",
-        "ms-vscode.vscode-serial-monitor",
-        "ms-vscode.cpptools-themes",
-        "marus25.cortex-debug",
+        "ms-vscode.cpptools",
         "ms-vscode.cmake-tools",
-        "ms-vscode.cpptools"
+        "marus25.cortex-debug",
+        "twxs.cmake",
+        "ms-vscode.vscode-serial-monitor",
+        "raspberry-pi.raspberry-pi-pico",
+        "wokwi.wokwi-vscode",
+        "ms-vscode.cpptools-themes",
+        "ms-vscode.cpptools-extension-pack"
     ]
 }
